--- a/composer.json
+++ b/composer.json
@@ -47,10 +47,10 @@
             "php -r \"@chmod('./public', 0777);\"",
             "php -r \"@chmod('./src', 0775);\"",
             "php -r \"@chmod('./themes', 0555);\"",
-            "php -r \"@chmod('./uploads', 0777);\"",
             "php -r \"@chmod('./var', 0777);\"",
             "php -r \"@chmod('./var/cache', 0777);\"",
             "php -r \"@chmod('./var/log', 0777);\"",
+            "php -r \"@chmod('./var/upload', 0777);\"",
             "php -r \"@chmod('./vendor', 0775);\"",
             "php ./vendor/bin/doctrine orm:schema-tool:create",
             "php -r \"@chmod('./var/database.sqlite', 0777);\""
@@ -62,10 +62,10 @@
             "php -r \"@chmod('./public', 0777);\"",
             "php -r \"@chmod('./src', 0775);\"",
             "php -r \"@chmod('./themes', 0555);\"",
-            "php -r \"@chmod('./uploads', 0777);\"",
             "php -r \"@chmod('./var', 0777);\"",
             "php -r \"@chmod('./var/cache', 0777);\"",
             "php -r \"@chmod('./var/log', 0777);\"",
+            "php -r \"@chmod('./var/upload', 0777);\"",
             "php -r \"@chmod('./vendor', 0775);\"",
             "php -r \"@chmod('./var/database.sqlite', 0777);\"",
             "php ./vendor/bin/doctrine orm:schema-tool:update --force",
@@ -78,10 +78,10 @@
             "php -r \"@chmod('./public', 0777);\"",
             "php -r \"@chmod('./src', 0775);\"",
             "php -r \"@chmod('./themes', 0555);\"",
-            "php -r \"@chmod('./uploads', 0777);\"",
             "php -r \"@chmod('./var', 0777);\"",
             "php -r \"@chmod('./var/cache', 0777);\"",
             "php -r \"@chmod('./var/log', 0777);\"",
+            "php -r \"@chmod('./var/upload', 0777);\"",
             "php -r \"@chmod('./vendor', 0775);\"",
             "php -r \"@chmod('./var/database.sqlite', 0777);\"",
             "php ./vendor/bin/doctrine orm:schema-tool:update --force"
