--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         "slim/twig-view": "^2.4",
         "slim/http-cache": "^0.4.0",
         "doctrine/orm": "^2",
-        "aengine/entity": "^1.0",
-        "aengine/validator": "^1.0",
-        "aengine/support": "^1.0",
+        "alksily/entity": "^1.0",
+        "alksily/validator": "^1.0",
+        "alksily/support": "^1.0",
         "twig/extensions": "^1.5",
         "phive/twig-extensions-deferred": "^2.0",
         "ramsey/uuid": "^3.8",
