--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "alksily/entity": "^1.0",
         "alksily/validator": "^1.0",
         "alksily/support": "^1.0",
+        "twig/twig": "2.12.1",
         "twig/extensions": "^1.5",
         "phive/twig-extensions-deferred": "^2.0",
         "ramsey/uuid": "^3.8",
