--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -97,8 +97,7 @@ http {
         }
 
         location / {
-            try_files $uri /index.php;
-            autoindex on;
+            try_files $uri /index.php?$query_string;
         }
 
         # fix ansi characters in file path
@@ -115,11 +114,11 @@ http {
 
         location ~ \.php$ {
             fastcgi_pass                php:9000;
-            fastcgi_split_path_info     ^(.+\.php)(/.*)$;
-            fastcgi_param               SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-            fastcgi_param               DOCUMENT_ROOT $realpath_root;
+		    fastcgi_index               index.php;
+            fastcgi_split_path_info     ^(.+.php)(.*)$;
+            fastcgi_param               SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include						fastcgi_params;
-            fastcgi_read_timeout        600;
+            fastcgi_read_timeout        300;
         }
     }
 }
