--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -81,19 +81,31 @@ http {
         }
 
         location /pub {
-            # activate publisher (admin) mode for this location
-            push_stream_publisher admin;
+            push_stream_publisher								;
+            push_stream_channels_path							$arg_id;
+            push_stream_store_messages							off;
+            client_max_body_size								32k;
+            client_body_buffer_size								32k;
 
-            # query string based channel id
-            push_stream_channels_path $arg_id;
+            if ($arg_tests = "on") {
+                push_stream_channels_path						"test_$1";
+            }
         }
 
         location ~ /sub/(.*) {
-            # activate subscriber (streaming) mode for this location
-            push_stream_subscriber;
+            # activate subscriber mode for this location
+            push_stream_subscriber								long-polling;
+
+            push_stream_last_received_message_time				"$arg_time";
+            push_stream_last_received_message_tag				"$arg_tag";
+            push_stream_last_event_id							"$arg_eventid";
 
             # positional channel path
-            push_stream_channels_path $1;
+            push_stream_channels_path							$1;
+
+            if ($arg_tests = "on") {
+                push_stream_channels_path						"test_$1";
+            }
         }
 
         location / {
