--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -32,7 +32,15 @@ http {
     ##
     # Push stream
     ##
-    push_stream_shared_memory_size 32M;
+    push_stream_shared_memory_size					32M;
+    push_stream_max_channel_id_length				200;
+
+    # max messages to store in memory
+    push_stream_max_messages_stored_per_channel		20;
+    push_stream_longpolling_connection_ttl			30s;
+    push_stream_message_template					"{\"id\":~id~,\"channel\":\"~channel~\",\"content\":~text~}"; #\"tag\":\"~tag~\", \"time\":\"~time~\", \"eventid\":\"~event-id~\"
+    push_stream_authorized_channels_only			off;
+    push_stream_allowed_origins						"*";
 
     ##
     # SSL Settings
