вынесены настройки соединения с базой данных и секретной соли

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
     php:
         image: 0x12f/php:latest
         environment:
-            - DEBUG=1
+            - DEBUG=0
             - ANALYTICS=0
+          # - SALT=Please-Change-Me
+          # - DATABASE=mysql://user:secret@localhost/mydb
         volumes:
             - $PWD/app:/var/container/app:ro
             - $PWD/config:/var/container/config:ro
