--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,7 +21,7 @@ http {
     # Gzip Settings
     ##
     gzip on;
-    gzip_comp_level 5
+    gzip_comp_level 5;
     gzip_disable "msie6";
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
