продолжение оптимизации nginx

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,50 +1,64 @@
 worker_processes auto;
 
 events {
-    worker_connections  1024;
+    use epoll;
+    worker_connections 1024;
+    multi_accept on;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    keepalive_timeout 30;
+    keepalive_requests 100;
+
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 2;
+    send_timeout 2;
     types_hash_max_size 2048;
-    client_max_body_size 20M;
+    client_max_body_size 1m;
+    client_body_timeout 10;
+    reset_timedout_connection on;
 
-    server_tokens off;
+    gzip                        on;
+    gzip_vary                   on;
+    gzip_proxied                any;
+    gzip_comp_level             5;
+    gzip_buffers                16 8k;
+    gzip_http_version           1.1;
+    gzip_min_length             256;
+    gzip_disable                "msie6";
+    gzip_types                  text/css
+                                text/javascript
+                                text/xml
+                                text/plain
+                                text/x-component
+                                application/javascript
+                                application/json
+                                application/xml
+                                application/rss+xml
+                                font/truetype
+                                font/opentype
+                                application/vnd.ms-fontobject
+                                image/svg+xml;
+    gzip_static on;
 
-    ##
-    # Gzip Settings
-    ##
-    gzip on;
-    gzip_comp_level 5;
-    gzip_disable "msie6";
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-    ##
-    # Push stream
-    ##
+    open_file_cache             max=200000 inactive=20s;
+    open_file_cache_valid       30s;
+    open_file_cache_min_uses    2;
+    open_file_cache_errors      on;
+
     push_stream_shared_memory_size					32M;
     push_stream_max_channel_id_length				200;
-
-    # max messages to store in memory
     push_stream_max_messages_stored_per_channel		20;
     push_stream_longpolling_connection_ttl			30s;
     push_stream_message_template					"{\"id\":~id~,\"channel\":\"~channel~\",\"content\":~text~}"; #\"tag\":\"~tag~\", \"time\":\"~time~\", \"eventid\":\"~event-id~\"
     push_stream_authorized_channels_only			off;
     push_stream_allowed_origins						"*";
 
-    ##
-    # SSL Settings
-    ##
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
-    ssl_prefer_server_ciphers on;
-
-    # expires map
     map $sent_http_content_type $expires {
         default                    off;
         text/html                  epoch;
@@ -53,9 +67,6 @@ http {
         ~image/                    max;
     }
 
-    ##
-    # Host Settings
-    ##
     server {
         listen   80;
         listen   [::]:80 default ipv6only=on;
@@ -63,10 +74,9 @@ http {
         server_name _;
         sendfile off;
 
-        error_log /dev/stdout info;
+        error_log  /dev/stdout info;
         access_log /dev/stdout;
 
-        charset		utf-8;
         expires     $expires;
 
         root        /var/container/public;
@@ -77,10 +87,7 @@ http {
         }
 
         location /channels-stats {
-            # activate channels statistics mode for this location
             push_stream_channels_statistics;
-
-            # query string based channel id
             push_stream_channels_path $arg_id;
         }
 
@@ -97,14 +104,10 @@ http {
         }
 
         location ~ /sub/(.*) {
-            # activate subscriber mode for this location
             push_stream_subscriber								long-polling;
-
             push_stream_last_received_message_time				"$arg_time";
             push_stream_last_received_message_tag				"$arg_tag";
             push_stream_last_event_id							"$arg_eventid";
-
-            # positional channel path
             push_stream_channels_path							$1;
 
             if ($arg_tests = "on") {
