--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -132,8 +132,8 @@ http {
         #}
 
         location ~ \.php$ {
-            fastcgi_pass                php:9000;
-		    fastcgi_index               index.php;
+            fastcgi_pass                127.0.0.1:9000;
+            fastcgi_index               index.php;
             fastcgi_split_path_info     ^(.+.php)(.*)$;
             fastcgi_param               SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include						fastcgi_params;
