--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "phive/twig-extensions-deferred": "^2.0",
         "ramsey/uuid": "^3.8",
         "ramsey/uuid-doctrine": "^1.5",
+        "bhaktaraz/php-rss-generator": "dev-master",
         "phpmailer/phpmailer": "^6.0",
         "pragmarx/google2fa": "^3.0",
         "bacon/bacon-qr-code": "^1.0",
