--- a/hooks/build
+++ b/hooks/build
@@ -1,9 +1,7 @@
 #!/usr/bin/env sh
 
-FILE=$(echo -n $BUILD_PATH | tail -c +2)
-
 if [ -z "${DOCKER_TAG}" ]; then
-  docker build --build-arg=COMMIT=$(git rev-parse --short HEAD) --build-arg=BRANCH=$SOURCE_BRANCH -t $IMAGE_NAME -f $FILE .
+  docker build --build-arg=COMMIT=$(git rev-parse --short HEAD) --build-arg=BRANCH=$SOURCE_BRANCH -t $IMAGE_NAME -f $DOCKERFILE_PATH .
 else
-  docker build --build-arg=COMMIT=$(git rev-parse --short HEAD) --build-arg=BRANCH=$DOCKER_TAG -t $IMAGE_NAME -f $FILE .
+  docker build --build-arg=COMMIT=$(git rev-parse --short HEAD) --build-arg=BRANCH=$DOCKER_TAG -t $IMAGE_NAME -f $DOCKERFILE_PATH .
 fi
