update task manager
add catalog category and product buf variable
show 5000 tasks in list
fix task methods name
fix prevent run another one worker
fix remove stuck task from list after 30 minutes
fix remove pid file when exception

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
           # - DATABASE=mysql://user:secret@localhost/mydb
         volumes:
             - ./config:/var/container/config:ro
+            - ./plugin:/var/container/plugin:rw
             - ./public:/var/container/public:ro
             - ./src:/var/container/src:ro
             - ./theme:/var/container/theme:rw
