--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,11 @@
         "bukashk0zzz/yml-generator": "^1.6",
         "samdark/sitemap": "^2.2",
         "monolog/monolog": "^1.17",
-        "runcmf/runtracy": "^0.2.10",
-        "sentry/sdk": "2.0.3"
+        "runcmf/runtracy": "^0.2.10"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "sentry/sdk": "2.0.3"
     },
     "autoload": {
         "psr-4": {
