--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Plugin\\": "plugin/"
         }
     }
 }
