--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
         environment:
             - DEBUG=1
           # - SALT=Please-Change-Me
+          # - SIMPLE_ORDER_SERIAL=1
           # - SIMPLE_PHONE_CHECK=1
           # - DATABASE=mysql://user:secret@localhost/mydb
           # - SENTRY=""
