--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "bhaktaraz/php-rss-generator": "dev-master",
         "phpmailer/phpmailer": "^6.0",
         "pragmarx/google2fa": "^3.0",
+        "phpoffice/phpspreadsheet": "^1.11",
         "bacon/bacon-qr-code": "^1.0",
         "vitalybaev/google-merchant-feed": "^1.0",
         "bukashk0zzz/yml-generator": "^1.6",
