--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,17 @@ services:
           # - DATABASE=mysql://user:secret@localhost/mydb
           # - SENTRY=""
         volumes:
-            - ./config:/var/container/config:ro
+            - ./.php_cs:/var/container/.php_cs:ro
+            - ./.composer.json:/var/container/.composer.json:rw
+            - ./.composer.lock:/var/container/.composer.lock:rw
+            - ./config:/var/container/config:rw
             - ./plugin:/var/container/plugin:rw
-            - ./public:/var/container/public:ro
-            - ./src:/var/container/src:ro
+            - ./public:/var/container/public:rw
+            - ./src:/var/container/src:rw
             - ./theme:/var/container/theme:rw
             - ./var:/var/container/var:rw
             - ./var/upload:/var/container/public/uploads:rw
             - ./vendor:/var/container/vendor:ro
+            - ./php-cs-fixer.phar:/var/container/php-cs-fixer.phar:ro
         ports:
             - 9000:80
