add compress html

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "bacon/bacon-qr-code": "^1.0",
         "monolog/monolog": "^1.17",
         "runcmf/runtracy": "^0.2.10",
-        "sentry/sdk": "2.0.3"
+        "sentry/sdk": "2.0.3",
+        "nochso/html-compress-twig": "^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "@stable"
