--- a/composer.json
+++ b/composer.json
@@ -37,11 +37,13 @@
         "nochso/html-compress-twig": "^2.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "@stable"
+        "friendsofphp/php-cs-fixer": "@stable",
+        "phpunit/phpunit": "@stable"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/",
+            "Tests\\": "tests/",
             "Plugin\\": "plugin/"
         }
     }
