--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "Tests\\": "tests/",
+            "tests\\": "tests/",
             "Plugin\\": "plugin/"
         }
     }
