--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "nochso/html-compress-twig": "^2.0"
     },
     "require-dev": {
+        "fzaninotto/faker": "^1.9",
         "friendsofphp/php-cs-fixer": "@stable",
         "phpunit/phpunit": "@stable"
     },
