--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "ramsey/uuid": "^3.8",
         "ramsey/uuid-doctrine": "^1.5",
         "bhaktaraz/php-rss-generator": "dev-master",
-        "phpmailer/phpmailer": "^6.0",
+        "phpmailer/phpmailer": "^6.1",
         "pragmarx/google2fa": "^3.0",
         "phpoffice/phpspreadsheet": "^1.11",
         "bacon/bacon-qr-code": "^1.0",
@@ -45,7 +45,8 @@
         "psr-4": {
             "Plugin\\": "plugin/",
             "App\\": "src/"
-        }
+        },
+        "files": ["src/helpers.php"]
     },
     "autoload-dev": {
         "psr-4": {
