--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,6 @@
         "slim/twig-view": "^2.4",
         "slim/http-cache": "^0.4.0",
         "doctrine/orm": "^2",
-        "alksily/entity": "^1.0",
-        "alksily/validator": "^1.2",
         "alksily/support": "^1.0",
         "twig/twig": "2.12.1",
         "twig/extensions": "^1.5",
@@ -34,7 +32,8 @@
         "monolog/monolog": "^1.17",
         "runcmf/runtracy": "^0.2.10",
         "sentry/sdk": "2.0.3",
-        "nochso/html-compress-twig": "^2.0"
+        "nochso/html-compress-twig": "^2.0",
+        "tightenco/collect": "^7.12"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
