--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "monolog/monolog": "^1.17",
         "runcmf/runtracy": "^0.2.10",
         "nochso/html-compress-twig": "^2.0",
-        "tightenco/collect": "^7.12"
+        "illuminate/collections": "^8.5"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
