fix hub address

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,7 @@ jobs:
             - uses: actions/checkout@v2
 
             - name: Log into registry
-              run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+              run: echo "${{ secrets.DOCKER_HUB }}" | docker login --username ${{ github.actor }}
 
             - name: Build Debian image and push
               run: |
