--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,6 +32,8 @@ jobs:
     # Push image to GitHub Packages.
     # See also https://docs.docker.com/docker-hub/builds/
     push:
+        needs: test
+
         runs-on: ubuntu-latest
         if: github.event_name == 'push'
 
