--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,7 +2,9 @@ version: "3"
 
 services:
     platform:
-        build: docker/debian/Dockerfile
+        build:
+            context: .
+            dockerfile: docker/debian/Dockerfile
         image: 0x12f/platform:test
         environment:
             - DEBUG=0
