--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,8 +26,9 @@ jobs:
             - name: Run tests
               run: |
                   docker-compose --file docker-compose.test.yml build
-                  docker-compose --file docker-compose.test.yml run platform vendor/bin/php-cs-fixer fix --config=.php_cs.dist
-                  docker-compose --file docker-compose.test.yml run platform vendor/bin/phpunit --color=always --configuration phpunit.xml
+                  docker-compose --file docker-compose.test.yml up -d
+                  docker-compose --file docker-compose.test.yml exec platform vendor/bin/php-cs-fixer fix --config=.php_cs.dist
+                  docker-compose --file docker-compose.test.yml exec platform vendor/bin/phpunit --color=always --configuration phpunit.xml
 
     # Push image to GitHub Packages.
     # See also https://docs.docker.com/docker-hub/builds/
