fix usage ubuntu specific version

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,7 +18,7 @@ jobs:
     # Run tests.
     # See also https://docs.docker.com/docker-hub/builds/automated-testing/
     test:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.04
 
         steps:
             - uses: actions/checkout@v2
@@ -34,7 +34,7 @@ jobs:
     push:
         needs: test
 
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.04
         if: github.event_name == 'push'
 
         steps:
